# snowy-lang

./: .gitignore  .travis.yml  .vimrc  Makefile.am  README  README.md  autogen.sh  build.sh  configure.ac  main.s  notes.md  program.snow  test1.op  test2.op  test3.op  test6.op
scratch/hello-llvm/: .gitignore  Makefile  fromc.c  my-hello.ll
scripts/: astylerc  check.memory.errors.sh  configure.mac.sh  configure.ubuntu.sh  docker-common.sh  docker-console.sh  docker-ssh.key  docker-test.sh  docker-up.sh  format.sh  link.sh
scripts/docker/: Dockerfile  build-bison.sh  build-download.sh  build-flex.sh  build-gcc.sh  build-llvm.sh  build-packages.sh  common.sh  zshrc-local
scripts/hello-llvm/: Makefile  fromc.c  my-hello.ll
scripts/travis/: before_script.sh  script.sh
src/lib/: Engine.cpp  Engine.h  Log.cpp  Log.h  Makefile.am  enums.h  node_assert.c  node_assert.h  nodes.c  nodes.h  nodes_desc.c  parser.y  parser.yy  structs.h  tokens.l  tokens.ll
src/lib/Common/: Assert.cpp  CodeGen.cpp  CodeGen.h  Log.cpp  Log.h  Makefile.am  SnowyAssert.cpp  SnowyAssert.h
src/lib/Compiler/: CodeGen.cpp  CodeGen.h  Compiler.cpp  Compiler.h  Execer.cpp  Execer.h  Makefile.am
src/lib/Nodes/: Args.cpp  Args.h  ArgsDecl.cpp  ArgsDecl.h  BoolLiteral.cpp  BoolLiteral.h  Call.cpp  Call.h  Callable.cpp  Callable.h  Comp.cpp  Comp.h  DeclareClass.cpp  DeclareClass.h  DeclareFunc.cpp  DeclareFunc.h  DeclareVar.cpp  DeclareVar.h  Expression.cpp  Expression.h  FuncDecl.cpp  FuncDecl.h  FuncDef.cpp  FuncDef.h  Ident.cpp  Ident.h  IfCond.cpp  IfCond.h  IntLiteral.cpp  IntLiteral.h  Makefile.am  Node.cpp  Node.h  NodeType.h  Operator.cpp  Operator.h  Statement.h  StringLiteral.cpp  StringLiteral.h  Tuple.cpp  (+4 more)
src/lib/Parser/: Driver.cpp  Driver.h  Lexer.l  Makefile.am  Parser.cpp  Parser.h  Parser.ypp  ProgramParser.ypp  Scanner.h  parser.ypp
tests/: ITSuite.cpp  IntLiteral_Test.cpp  Makefile.am  MemoryCheck  NodeTestSuite.cpp  ParserTest.cpp  ParserTestSuite.cpp  SnowyTestSuite.cpp  SnowyTestSuite.h  nodes_test.c  nodes_test.cpp
tests/NodeTest/: CallTest.cpp  IntLiteralTest.cpp  NodeTest.cpp  StringLiteralTest.cpp
